<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center_horizontal"
            android:textSize="48sp"
            android:fontFamily="sans-serif-thin"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="56dp"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textView2"/>

    <EditText
            android:inputType="textEmailAddress"
            app:layout_constraintVertical_bias="0.1"
            android:id="@+id/reg_te_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="58dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <EditText
            android:id="@+id/reg_te_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="14"
            android:hint="@string/hint_password"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/reg_te_email"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="58dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/reg_te_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:layout_marginTop="16dp"
            android:inputType="textCapWords"
            app:layout_constraintTop_toBottomOf="@+id/reg_te_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="58dp"/>

    <EditText
            android:id="@+id/reg_te_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_hint_surname"
            android:layout_marginTop="16dp"
            android:inputType="textCapWords"
            app:layout_constraintTop_toBottomOf="@+id/reg_te_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="58dp"/>


    <Button
            android:padding="8dp"
            android:fontFamily="sans-serif-medium"
            android:id="@+id/reg_btn_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_registration"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/reg_te_surname"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>


    <!--<TextView-->
    <!--android:textColor="@color/colorButton"-->
    <!--android:id="@+id/reg_tv_already_reg"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/reg_text_to_login"-->
    <!--android:layout_margin="16dp"-->
    <!--android:layout_gravity="center_horizontal"-->
    <!--android:textSize="14sp"-->
    <!--android:fontFamily="sans-serif-light"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/reg_btn_registration" android:layout_marginEnd="8dp"-->
    <!--app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"-->
    <!--app:layout_constraintStart_toStartOf="parent"/>-->


</androidx.constraintlayout.widget.ConstraintLayout>